
1.2.2:
Sam Lantinga - Fri Apr  7 16:49:45 PDT 2000
 * The "arch" attribute for options allows multiple architectures
 * Documented the "size" attribute for the option element

1.2.1:
Sam Lantinga - Fri Mar 10 15:45:31 PST 2000
 * Added "cdromfile" attribute to specify a unique file on the install CDROM.
Sam Lantinga - Fri Mar 10 14:49:11 PST 2000
 * Keep prompting the user if the do not insert the CD-ROM
Stephane Peter - Wed Mar  8 14:27:11 PST 2000
 * Added "cdrom" attribute to the "install" element to prompt user for CDROM.
Stephane Peter - Tue Mar  7 14:34:11 PST 2000
 * Added default environment variables for scripts called from within setup.
 * Added support for "arch" and "libc" attributes in the "binary" element.
Stephane Peter - Thu Mar  2 17:04:06 PST 2000
 * Added CDROM support and "cdrom" attribute to "files" and "binary" elements
Sam Lantinga - Thu Feb 17 18:59:36 PST 2000
 * Only one menu entry for each combination of desktop and app is created.
Sam Lantinga - Mon Feb 14 13:06:46 PST 2000
 * Added -V command line option to print the version and build date
Troy A. Griffitts - Mon, 14 Feb 2000 12:24:32 -0700
 * Added support for the RedHat /etc/X11/applnk desktop directory
 * Added "menu" and "name" attributes to the binary element
Troy A. Griffitts - Fri, 11 Feb 2000 12:07:39 -0700
 * Added environment variable parsing to the parse_line() function
Troy A. Griffitts - Fri, 11 Feb 2000 12:07:39 -0700
 * Added "path" attribute to the files element
Bernd Kreimeier - 1999-12-10
 * detect.c (detect_diskspace): replaced Karl's libc detection code
   (which failed on glibc-2.0 on our testbox) with new one.

1.2:  Third public release
SOL -   Set the umask for the installer to: 022 
SOL -   Added "arch" and "libc" attributes to the option element
SOL -   Added SETUP_ARCH and SETUP_LIBC environment overrides

1.1:  Second public release
SOL -   Added license file support (eula="license.txt" option for install XML)